# ML

./: .gitignore  CMakeLists.txt  README.md  todo.md
csrc/include/: checkpoint.h  comm.h  cuda_stream.h  data_loader.h  error.h  fsdp.h  gemm_kernels.h  layer_norm.h  logging.h  metrics.h  model.h  nccl_wrapper.h  optimizer.h  tensor.h
csrc/kernels/: activation_kernels.cu  attention_kernels.cu  gemm_kernels.cu  layer_norm_kernel.cu  mlp_kernel.cu  mlp_kernels.cu  moe_kernels.cu  vision_encoder.cu
csrc/src/: checkpoint.cu  comm.cu  cuda_stream.cu  data_loader.cu  error.cu  fsdp.cu  layer_norm.cu  logging.cu  main.cu  metrics.cu  model.cu  nccl_wrapper.cu  optimizer.cu  rms_norm.cu  tensor.cu
reference/: bench_jax.py  bench_torch.py
scripts/: build.sh  env.sh
train/: attn_bench.cu  attn_cudnn.cuh  attn_cudnn_test.cu  gemm_bench.cu  gpt.cu  gpt_kernels.cuh  norm_bench.cu  norm_bench2.cu  smoke.cu
